# pg_parquet

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  Pipfile  README.md  build.rs  patch_arn_xml.py
.devcontainer/: .env  Dockerfile
.github/workflows/: ci.yml
sql/: pg_parquet--0.3.2--0.4.0.sql
src/: arrow_parquet.rs  lib.rs  parquet_copy_hook.rs  parquet_udfs.rs  pgrx_utils.rs
src/arrow_parquet/: compression.rs  field_ids.rs  match_by.rs  parquet_reader.rs  parquet_version.rs  parquet_writer.rs  pg_to_arrow.rs  schema_parser.rs  uri_utils.rs
src/arrow_parquet/arrow_to_pg/: composite.rs  context.rs  json.rs  jsonb.rs
src/arrow_parquet/pg_to_arrow/: context.rs  json.rs  jsonb.rs  numeric.rs  uuid.rs
src/object_store/: aws.rs  azure.rs  gcs.rs  http.rs  local_file.rs
src/parquet_copy_hook/: copy_from.rs  copy_from_program.rs  copy_from_stdin.rs  copy_to.rs  copy_to_dest_receiver.rs  copy_to_program.rs  copy_to_split_dest_receiver.rs  copy_to_stdout.rs  copy_utils.rs  hook.rs  pg_compat.rs
src/parquet_udfs/: list.rs  metadata.rs  schema.rs  stats.rs
src/pgrx_tests/: common.rs  copy_from_coerce.rs  copy_options.rs  copy_pattern.rs  copy_pg_rules.rs  copy_program.rs  copy_stdin_out.rs  copy_type_roundtrip.rs  gucs.rs  mod.rs  object_store.rs  udfs.rs
src/type_compat/: geometry.rs  pg_arrow_type_conversions.rs
