[package]
name = "pg_parquet"
version = "0.5.0"
edition = "2021"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib","lib"]

[[bin]]
name = "pgrx_embed_pg_parquet"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg_test = []

[dependencies]
arrow = {version = "56", default-features = false}
arrow-cast = {version = "56", default-features = false}
arrow-schema = {version = "56", default-features = false, features = ["canonical_extension_types"]}
aws-config = { version = "1", default-features = false, features = ["rustls","rt-tokio"] }
aws-credential-types = {version = "1", default-features = false}
azure_storage = {version = "0.21", default-features = false}
futures = "0.3"
glob = "0.3"
home = "0.5"
libc = {version = "0.2", default-features = false }
object_store = {version = "=0.12.2", default-features = false, features = ["aws", "azure", "fs", "gcp", "http"]}
once_cell = "1"
parquet = {version = "56", default-features = false, features = [
    "arrow",
    "snap",
    "brotli",
    "flate2-zlib-rs",
    "simdutf8",
    "lz4",
    "zstd",
    "object_store",
    "arrow_canonical_extension_types",
]}
pgrx = "=0.16.0"
rust-ini = "0.21"
serde = "1"
serde_json = "1"
tokio = {version = "1", default-features = false, features = ["rt", "time", "macros"]}
url = "2"

[dev-dependencies]
pgrx-tests = "=0.16.0"

[build-dependencies]
cfg_aliases = "0.2"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
